--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
@@ -41,3 +42,15 @@ app-example
 # generated native folders
 /ios
 /android
+
+#vscode
+.vscode/
+
+#bkp - old
+old.*
+
+#cahves
+/chave
+
+#aab
+/obj
